# aurmr-setup

./: README.md  pyproject.toml
aurmr-setup/: pyproject.toml
aurmr-setup/aurmr-setup/cli/: __init__.py
aurmr-setup/initial/: 10_setup_system.sh  20_install_rt_patch.sh  50_setup_user_account.sh  60_install_azure_drivers.sh
aurmr-setup/system_scripts/: 20_install_rt_patch.sh.disabled  50_setup_user_account.sh
aurmr-setup/user_scripts/: create_new_workspace.sh
aurmr_setup/cli/: __init__.py  environment_cli.py  main_cli.py  receipts.py  recipes.py  recipes_cli.py  system_cli.py  utils.py  workspace.py  workspace_cli.py
aurmr_setup/core/: config.py  recipes.py  system_control.py  utils.py  workspace.py
aurmr_setup/utils/: environment_utils.py  robostack_utils.py  workspace_utils.py
launch_scripts/: core.sh  launch_aurmr.sh  tasks.sh  tasks_opti_grasp.sh  tool_calibrate_pod.sh
system_scripts/: 10_configure_system.sh  10_setup_system.sh  20_install_rt_patch.sh.disabled  20_setup_hostnames.sh  40_setup_cross_mounts.sh  50_configure_bash.sh  50_configure_zsh.sh  50_setup_user_account.sh  60_configure_git.sh  60_configure_pip.sh  60_install_azure_drivers.sh  60_install_conda.sh  60_install_dev_dependencies.sh  60_install_user_tools.sh  60_rosdep_init.sh  70_configure_intel_realsense.sh
user_scripts/: 10_create_new_workspace.sh  40_install_compilers.sh  40_install_ros.sh  50_install_aurmr_tahoma.sh  50_install_azure_kinect.sh  50_install_webinterface.sh  activate_workspace.bashrc  aurmr_setup.bashrc  create_new_workspace.sh  setup.bash
