[tool.poetry]
name = "aurmr-setup"
version = "0.1.0"
description = ""
authors = ["Markus Grotz <grotz@uw.edu>"]
packages = [{include = "aurmr_setup"}, {include = "system_scripts"}, {include = "user_scripts"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
rich-click = "^1"
click-prompt = ">=0.5.1"
psutil = "^5.9.8"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aurmr = 'aurmr_setup.cli:cli'

